--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo
+
+# Security Default ID / Password
+spring.security.user.name=admin
+spring.security.user.password=1234
+
+# Spring AI Key, MySQL, JPA
+spring.config.import=classpath:api-key.properties, classpath:jpa.properties, classpath:mysql.properties
+
+# chat
+spring.ai.openai.chat.options.model=gpt-3.5-turbo
+spring.ai.openai.chat.options.temperature=0.7
