Repository + Service + 리팩토링

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,23 @@ spring.security.user.password=1234
 # Spring AI Key, MySQL, JPA
 spring.config.import=classpath:api-key.properties, classpath:jpa.properties, classpath:mysql.properties
 
+# \uC11C\uBC84 \uC778\uCF54\uB529 \uC124\uC815
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
+
+# Thymeleaf \uC124\uC815
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+
+# \uBA54\uC2DC\uC9C0 \uC18C\uC2A4 \uC124\uC815
+spring.messages.basename=messages, validationMessages
+spring.messages.encoding=UTF-8
+
 # chat
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
+
+# \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+upload.dir=./uploads/
