--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.ai.openai.chat.options.temperature=0.7
 
 # \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
 upload.dir=./uploads/
+
+# \uBC30\uCE58\uC0AC\uC774\uC988
+spring.jpa.properties.hibernate.default_batch_fetch_size=75
