--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=demo
 
+spring.profiles.active=dev
+
 # Security Default ID / Password
 spring.security.user.name=admin
 spring.security.user.password=1234
 
-# Spring AI Key, MySQL, JPA
+# Spring AI Key, MySQL, JPA \uC124\uC815\uD30C\uC77C
 spring.config.import=classpath:api-key.properties, classpath:jpa.properties, classpath:mysql.properties
 
 # \uC11C\uBC84 \uC778\uCF54\uB529 \uC124\uC815
@@ -18,7 +20,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 # \uBA54\uC2DC\uC9C0 \uC18C\uC2A4 \uC124\uC815
-spring.messages.basename=messages, validationMessages
+spring.messages.basename=messages, errors
 spring.messages.encoding=UTF-8
 
 # chat
@@ -26,7 +28,11 @@ spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
 
 # \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
-upload.dir=./uploads/
+upload.dir=/home/ubuntu/uploads/
 
-# \uBC30\uCE58\uC0AC\uC774\uC988
-spring.jpa.properties.hibernate.default_batch_fetch_size=75
+# \uD30C\uC77C \uC5C5\uB85C\uB4DC
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=25MB
+
+#  HiddenHttpMethodFilter\uB97C \uD65C\uC131\uD654
+spring.mvc.hiddenmethod.filter.enabled=true
