--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 
 ext {
     set('springAiVersion', "1.0.0-M5")
+    set('querydslVersion', "5.0.0") // QueryDSL 버전 설정
 }
 
 dependencies {
@@ -40,6 +41,15 @@ dependencies {
     implementation 'org.springframework.session:spring-session-core'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // QueryDSL 의존성 추가
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    implementation "com.querydsl:querydsl-core:${querydslVersion}"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -51,13 +61,30 @@ dependencies {
     testImplementation 'org.mockito:mockito-core'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'com.h2database:h2'
-
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
     }
+}
+
+// QueryDSL Q타입 생성 경로 설정
+def querydslSrcDir = 'src/main/generated'
+
+// clean 작업 시 생성된 Q타입 삭제
+clean {
+    delete file(querydslSrcDir)
+}
+
+// Q타입 소스 위치 지정
+tasks.withType(JavaCompile) {
+    options.generatedSourceOutputDirectory = file(querydslSrcDir)
+}
+
+// 소스셋에 Q타입 소스 디렉토리 추가
+sourceSets {
+    main.java.srcDirs += [ querydslSrcDir ]
 }
 
 tasks.named('test') {
