회원 가입시 메일 이벤트 리스너

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,8 @@ spring.servlet.multipart.max-request-size=25MB
 
 #  HiddenHttpMethodFilter\uB97C \uD65C\uC131\uD654
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# Amin Request Key Value
+app.admin.secret.key=X-ADMIN-SECRET
+app.admin.secret.value=mySuperSecretKey123
+
