spring ai testCode 작성

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,2 +1,8 @@
 # properties
 spring.config.import=classpath:test-properties/jpa-test.properties, classpath:test-properties/h2.properties, classpath:api-key.properties
+
+# chat
+spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.chat.options.temperature=0.7
+
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
