회원가입 폼에 비밀번호 확인 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,12 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
+    maven { url = uri("https://repo.spring.io/milestone") }
+    maven { url = uri("https://repo.spring.io/snapshot") }
 }
 
 ext {
-    set('springAiVersion', "1.0.0-M5")
+    set('springAiVersion', "1.0.0-SNAPSHOT")
     set('querydslVersion', "5.0.0") // QueryDSL 버전 설정
 }
 
@@ -37,11 +38,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
     implementation 'org.springframework.session:spring-session-core'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+    implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
 
     // QueryDSL 의존성 추가
     implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
