--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.messages.basename=messages, errors
 spring.messages.encoding=UTF-8
 
 # chat
-spring.ai.openai.chat.options.model=gpt-3.5-turbo
+spring.ai.openai.chat.options.model=gpt-4o-mini
 spring.ai.openai.chat.options.temperature=0.7
 
 # \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
