feat: Update UI - Add glassmorphism effects, modern gradients, and dark mode support

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,5 +17,6 @@ spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
 
 spring.jpa.properties.hibernate.connection.useUnicode=true
 
-# \uBC30\uCE58\uC0AC\uC774\uC988
-spring.jpa.properties.hibernate.default_batch_fetch_size=75
+spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
+spring.ai.mcp.client.type=async
+spring.ai.mcp.client.request-timeout=60s
