--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=demo
 
-spring.profiles.active=dev
-
 # Security Default ID / Password
 spring.security.user.name=admin
 spring.security.user.password=1234
@@ -17,11 +15,18 @@ server.servlet.encoding.enabled=true
 # Thymeleaf \uC124\uC815
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
-spring.thymeleaf.cache=false
 
 # \uBA54\uC2DC\uC9C0 \uC18C\uC2A4 \uC124\uC815
 spring.messages.basename=messages, errors
 spring.messages.encoding=UTF-8
+spring.messages.cache-duration=3600
+
+# \uC11C\uBC84 \uCD5C\uC801\uD654 \uC124\uC815
+server.tomcat.connection-timeout=5000
+server.tomcat.threads.max=16
+server.tomcat.accept-count=100
+server.tomcat.keep-alive-timeout=60000
+server.tomcat.max-connections=10000
 
 # chat
 spring.ai.openai.chat.options.model=gpt-4o-mini
@@ -40,4 +45,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Amin Request Key Value
 app.admin.secret.key=X-ADMIN-SECRET
 app.admin.secret.value=mySuperSecretKey123
+
 
