--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,12 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url = uri("https://repo.spring.io/milestone") }
-    maven { url = uri("https://repo.spring.io/snapshot") }
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+    }
 }
 
 ext {
@@ -30,6 +34,7 @@ ext {
     set('querydslVersion', "5.0.0") // QueryDSL 버전 설정
 }
 
+// **Spring Boot Starter Dependencies**
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -43,25 +48,33 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+    // **Spring AI Dependencies**
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
     implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
 
-    // QueryDSL 의존성 추가
+    // **QueryDSL Dependencies**
     implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
     implementation "com.querydsl:querydsl-core:${querydslVersion}"
     annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // **Other Dependencies**
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // **Annotation Processors**
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // **Test Dependencies**
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-core'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'com.h2database:h2'
 }
@@ -72,7 +85,7 @@ dependencyManagement {
     }
 }
 
-// QueryDSL Q타입 생성 경로 설정
+// **QueryDSL Configuration**
 def querydslSrcDir = 'src/main/generated'
 
 // clean 작업 시 생성된 Q타입 삭제
@@ -90,13 +103,11 @@ sourceSets {
     main.java.srcDirs += [ querydslSrcDir ]
 }
 
+// **Test Configuration**
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-test {
-    jvmArgs = [
-            "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains("mockito-core") }}"
-    ]
-    forkEvery = 1
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
 }
