--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,6 @@ spring.ai.openai.chat.options.temperature=0.7
 
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 
+spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
+spring.ai.mcp.client.type=sync
+spring.ai.mcp.client.request-timeout=600s
