Two-Step Query Pattern on QueryDslPostRepositoryImpl

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,6 @@
 # properties
-spring.config.import=classpath:test-properties/jpa-test.properties, classpath:test-properties/h2.properties, classpath:api-key.properties
+spring.config.import=classpath:test-properties/jpa-test.properties, classpath:mysql.properties, classpath:api-key.properties
 
 # chat
 spring.ai.openai.chat.options.model=gpt-4o-mini
 spring.ai.openai.chat.options.temperature=0.7
-
-logging.level.org.springframework.ai.chat.client.advisor=DEBUG
-
-spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
-spring.ai.mcp.client.type=sync
-spring.ai.mcp.client.request-timeout=600s
