--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo
 
+spring.profiles.active=test
+
 # Security Default ID / Password
 spring.security.user.name=admin
 spring.security.user.password=1234
@@ -46,4 +48,11 @@ spring.mvc.hiddenmethod.filter.enabled=true
 app.admin.secret.key=X-ADMIN-SECRET
 app.admin.secret.value=mySuperSecretKey123
 
+# \uACF5\uD1B5 \uC124\uC815
+# \uCD94\uAC00 \uAD8C\uC7A5 \uC124\uC815
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_fetch=false
