게시판 완성

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,6 @@
+#\uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+upload.dir=C:/Users/ChanYoungPark/Desktop/prj/demo/uploads/
+
 # properties
 spring.config.import=classpath:test-properties/jpa-test.properties, classpath:mysql.properties, classpath:api-key.properties
 
