--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,54 @@
-#\uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+# Test environment configuration (Windows, H2 in-memory database)
+
+# File upload path
 upload.dir=C:/Users/ChanYoungPark/Desktop/prj/demo/uploads/
 
-# properties
-spring.config.import=classpath:test-properties/jpa-test.properties, classpath:mysql.properties, classpath:api-key.properties
+# Import required properties (comment out oauth2.properties for testing)
+# spring.config.import=classpath:api-key.properties, classpath:oauth2.properties
+spring.config.import=classpath:api-key.properties
 
-# chat
+# Mock OAuth2 client registration for testing
+spring.security.oauth2.client.registration.google.client-id=test-client-id
+spring.security.oauth2.client.registration.google.client-secret=test-client-secret
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri="{baseUrl}/login/oauth2/code/{registrationId}"
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Batch configuration
+spring.jpa.properties.hibernate.default_batch_fetch_size=75
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_fetch=false
+
+# Connection pool properties
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+
+# Security Default ID / Password (for testing)
+spring.security.user.name=admin
+spring.security.user.password=1234
+
+# OpenAI Chat configuration
 spring.ai.openai.chat.options.model=gpt-4o-mini
 spring.ai.openai.chat.options.temperature=0.7
+
+# Admin configuration
+app.admin.secret.key=X-ADMIN-SECRET
+app.admin.secret.value=testSecretKey123
