--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,58 +1,33 @@
 spring.application.name=demo
 
-spring.profiles.active=test
+# Set default profile (can be overridden with spring.profiles.active system property)
+spring.profiles.active=dev
 
 # Security Default ID / Password
 spring.security.user.name=admin
 spring.security.user.password=1234
 
-# Spring AI Key, MySQL, JPA \uC124\uC815\uD30C\uC77C
-spring.config.import=classpath:api-key.properties, classpath:jpa.properties, classpath:mysql.properties
-
-# \uC11C\uBC84 \uC778\uCF54\uB529 \uC124\uC815
+# 서버 인코딩 설정
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
 
-# Thymeleaf \uC124\uC815
+# Thymeleaf 설정
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
 
-# \uBA54\uC2DC\uC9C0 \uC18C\uC2A4 \uC124\uC815
+# 메시지 소스 설정
 spring.messages.basename=messages, errors
 spring.messages.encoding=UTF-8
 spring.messages.cache-duration=3600
 
-# \uC11C\uBC84 \uCD5C\uC801\uD654 \uC124\uC815
-server.tomcat.connection-timeout=5000
-server.tomcat.threads.max=16
-server.tomcat.accept-count=100
-server.tomcat.keep-alive-timeout=60000
-server.tomcat.max-connections=10000
-
-# chat
-spring.ai.openai.chat.options.model=gpt-4o-mini
-spring.ai.openai.chat.options.temperature=0.7
-
-# \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
-upload.dir=/home/ubuntu/uploads/
-
-# \uD30C\uC77C \uC5C5\uB85C\uB4DC
+# 파일 업로드
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=25MB
 
-#  HiddenHttpMethodFilter\uB97C \uD65C\uC131\uD654
+# HiddenHttpMethodFilter를 활성화
 spring.mvc.hiddenmethod.filter.enabled=true
 
-# Amin Request Key Value
+# Admin Request Key Value
 app.admin.secret.key=X-ADMIN-SECRET
 app.admin.secret.value=mySuperSecretKey123
-
-# \uACF5\uD1B5 \uC124\uC815
-# \uCD94\uAC00 \uAD8C\uC7A5 \uC124\uC815
-spring.jpa.properties.hibernate.jdbc.batch_size=50
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
-
-spring.jpa.properties.hibernate.query.fail_on_pagination_over_fetch=false
