--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,35 @@
+#\uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
 upload.dir=C:/Users/ChanYoungPark/Desktop/prj/demo/uploads/
+
+# properties
+spring.config.import=classpath:mysql.properties, classpath:api-key.properties, classpath:oauth2.properties
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Batch configuration
+spring.jpa.properties.hibernate.default_batch_fetch_size=75
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_fetch=false
+
+# Connection pool properties
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+
+# chat
+spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.chat.options.temperature=0.7
+
+# Admin configuration
+app.admin.secret.key=X-ADMIN-SECRET
+app.admin.secret.value=devSecretKey123
