--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -12,9 +12,9 @@ NotEmpty.address.streetAddress=\uB3C4\uB85C\uBA85 \uC8FC\uC18C\uB97C \uC785\uB82
 NotEmpty.address.detailAddress=\uC0C1\uC138 \uC8FC\uC18C\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 
 # PostRequestDTO \uD544\uB4DC \uAC80\uC99D \uC624\uB958 \uBA54\uC2DC\uC9C0
-NotEmpty.postRequestDTO.title=\uAC8C\uC2DC\uAE00 \uC81C\uBAA9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
-NotEmpty.postRequestDTO.content=\uAC8C\uC2DC\uAE00 \uB0B4\uC6A9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
-NotNull.postRequestDTO.categoryId=\uCE74\uD14C\uACE0\uB9AC\uB97C \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
+NotEmpty.postCreationRequestDTO.title=\uAC8C\uC2DC\uAE00 \uC81C\uBAA9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+NotEmpty.postCreationRequestDTO.content=\uAC8C\uC2DC\uAE00 \uB0B4\uC6A9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+NotNull.postCreationRequestDTO.categoryId=\uCE74\uD14C\uACE0\uB9AC\uB97C \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
 
 # CommentToPostRequestDTO \uD544\uB4DC \uAC80\uC99D \uC624\uB958 \uBA54\uC2DC\uC9C0
 NotEmpty.commentToPostRequestDTO.content=\uB313\uAE00 \uB0B4\uC6A9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
@@ -61,16 +61,16 @@ Pattern=\uC785\uB825 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB
 typeMismatch.addressDTO=\uC8FC\uC18C \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 typeMismatch.commentToPostRequestDTO=\uB313\uAE00 \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 typeMismatch.postCategoryRequestDTO=\uCE74\uD14C\uACE0\uB9AC \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
-typeMismatch.postRequestDTO=\uAC8C\uC2DC\uAE00 \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+typeMismatch.postCreationRequestDTO=\uAC8C\uC2DC\uAE00 \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 typeMismatch.postSearchRequestDTO=\uAC80\uC0C9 \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 typeMismatch.userRegisterRequestDTO=\uC0AC\uC6A9\uC790 \uB4F1\uB85D \uC815\uBCF4\uC758 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 typeMismatch.postCategoryRequestDTO.parentId=\uBD80\uBAA8 \uCE74\uD14C\uACE0\uB9AC ID\uB294 \uC22B\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
-typeMismatch.postRequestDTO.categoryId=\uCE74\uD14C\uACE0\uB9AC ID\uB294 \uC22B\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
+typeMismatch.postCreationRequestDTO.categoryId=\uCE74\uD14C\uACE0\uB9AC ID\uB294 \uC22B\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 typeMismatch.parentId=\uBD80\uBAA8 ID\uB294 \uC22B\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 typeMismatch.categoryId=\uCE74\uD14C\uACE0\uB9AC ID\uB294 \uC22B\uC790\uC5EC\uC57C \uD569\uB2C8\uB2E4.
 typeMismatch.java.lang.Long=\uC22B\uC790 \uD615\uC2DD\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4.
 typeMismatch=\uC785\uB825 \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 
 # \uD30C\uC77C \uAD00\uB828 \uC624\uB958 \uBA54\uC2DC\uC9C0
-typeMismatch.postRequestDTO.files=\uD30C\uC77C \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
-Size.postRequestDTO.files=\uCCA8\uBD80 \uD30C\uC77C\uC740 \uCD5C\uB300 {1}\uAC1C\uAE4C\uC9C0 \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+typeMismatch.postCreationRequestDTO.files=\uD30C\uC77C \uD615\uC2DD\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+Size.postCreationRequestDTO.files=\uCCA8\uBD80 \uD30C\uC77C\uC740 \uCD5C\uB300 {1}\uAC1C\uAE4C\uC9C0 \uC5C5\uB85C\uB4DC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
